Verify local WildFly identity and share managed server instances